--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
-  # Web Service (FastAPI)
+  # Web Service (FastAPI + Celery Worker)
   - type: web
     name: product-importer-web
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
+    startCommand: chmod +x start_render.sh && ./start_render.sh
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
@@ -12,36 +12,10 @@ services:
         fromDatabase:
           name: product-importer-db
           property: connectionString
-      - key: REDIS_URL
-        fromService:
-          type: redis
-          name: product-importer-redis
-          property: connectionString
-
-  # Background Worker (Celery)
-  - type: worker
-    name: product-importer-worker
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: celery -A celery_app worker --loglevel=info
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.0
-      - key: DATABASE_URL
-        fromDatabase:
-          name: product-importer-db
-          property: connectionString
-      - key: REDIS_URL
-        fromService:
-          type: redis
-          name: product-importer-redis
-          property: connectionString
+      # REDIS_URL must be added manually in the dashboard if using external Redis
 
 databases:
   - name: product-importer-db
     databaseName: product_importer
     user: product_user
-
-# Note: Render requires a paid plan for Redis. 
-# For free tier, you might need to use an external Redis provider (e.g., Upstash) 
-# and set REDIS_URL as a manual environment variable.
+    plan: free
